  syntax = "proto3";

  package rooms;

  option go_package = "Hotelium/reservations/pkg/rooms;rooms";

  service RoomService {
    rpc CreateRoom (CreateRoomRequest) returns (CreateRoomResponse);
    rpc GetRoom (GetRoomRequest) returns (GetRoomResponse);
    rpc ListRooms (ListRoomsRequest) returns (ListRoomsResponse);
    rpc SearchRoom (SearchRoomByNameRequest) returns (SearchRoomByNameResponse);
  }

  message Room {
    int32 id = 1;
    string name = 2;
    string roomType = 3;
    float price = 4;
  }

  message CreateRoomRequest {
    Room room = 1;
  }

  message CreateRoomResponse {
    Room room = 1;
  }

  message GetRoomRequest {
    int32 id = 1;
  }

  message GetRoomResponse {
    Room room = 1;
  }

  message ListRoomsRequest {}

  message ListRoomsResponse {
    repeated Room rooms = 1;
  }

  message SearchRoomByNameRequest{
    string roomName = 1;
  }

  message SearchRoomByNameResponse{
    repeated Room room = 1;
  }